--- a/static/trans.html
+++ b/static/trans.html
@@ -13,6 +13,7 @@
     <script src="js/angular-elastic-input.min.js"/></script>
 
     <script src="js/my-app.js"/></script>
+    <script src="js/tm-factories.js"/></script>
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -47,6 +48,9 @@
     <div id="tm-page-header" class="container-fluid">
         <div class="container">
             <a href="/">Home</a>
+            <a href="/accounts.html">Accounts</a>
+            <a href="/accounts.html#?accountTypes=Cash">Cash Accounts</a>
+            <a href="/accounts.html#?accountTypes=Investment">Investment Accounts</a>
             <a href="/trans.html">Transactions</a>
         </div>
     </div>
@@ -54,165 +58,17 @@
     <div class="container" ng-controller="TranPageController">
 
         <div class="row">
-            <div class="tm-portal" ng-controller="TranChartController">
-                <h3>Chart: Transactions 
-                    <small>(<a href="" ng-click="renderChartByTime(chartTrans)">by time</a>)</small> 
-                    <small>(<a href="" ng-click="renderChartByTags(chartTrans)">by tags</a>)</small>
-                </h3>
-                <div>
-                    <div class="tm-tran-canvas-thinking" > 
-                        <img src="icons/thinking.gif" ng-if="isChartThinking"/>
-                    </div>
-                    <canvas id="tm-tran-canvas-element" width="1000" height="350" ></canvas>
-                </div>
+            <div ng-include="'templates/tran-query.html'"> 
             </div>
         </div>
 
         <div class="row">
-            <div class="container tm-portal tm-tran-query-form" ng-controller="TranQueryController">
-                    <h3>Filter Transactions</h3>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="tm-portal">
-                                <h4>Tag Inclusion Filter 
-                                    <small>(<a href="" ng-init="showTagList=false" ng-click="showTagList = !showTagList">show all</a>)</small>
-                                </h4>
-                                <div ng-if="showTagList" class="tm-show-tags-list" >
-                                    <span ng-repeat="tag in tags | orderBy">
-                                        <span class="span-tag">{{tag}}</span>
-                                    </span>
-                                </div>
-                                <div class="tm-tag-filter-list">
-                                    <span ng-repeat="tag in tagsFilter">
-                                        <span class="span-tag">{{tag}}<a class="span-tag-x" href="" ng-click="removeTag(tag)">x</a></span>
-                                    </span>
-                                    <form class="form-tag" ng-submit="addTag()" >
-                                        <input type="text" 
-                                               id="input-tag-{{tran._id}}"
-                                               class="tm-input-tag form-control input-sm" 
-                                               pu-elastic-input 
-                                               style="min-width: 100px; max-width: 150px;"
-                                               ng-model="inputTagFilter" 
-                                               tm-auto-fill="tags"
-                                               placeholder="+"
-                                               autocomplete="off" />
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="tm-portal">
-                                <h4>Tag Exclusion Filter 
-                                    <small>(<a href="" ng-init="showTagList=false" ng-click="showTagExcludeList = !showTagExcludeList">show all</a>)</small>
-                                </h4>
-                                <div ng-if="showTagExcludeList" class="tm-show-tags-list" >
-                                    <span ng-repeat="tag in tags | orderBy">
-                                        <span class="span-tag">{{tag}}</span>
-                                    </span>
-                                </div>
-                                <div class="tm-tag-filter-list">
-                                    <span ng-repeat="tag in tagsExcludeFilter">
-                                        <span class="span-tag">{{tag}}<a class="span-tag-x" href="" ng-click="removeTagExclude(tag)">x</a></span>
-                                    </span>
-                                    <form class="form-tag" ng-submit="addTagExclude()" >
-                                        <input type="text" 
-                                               id="input-tag-{{tran._id}}"
-                                               class="tm-input-tag form-control input-sm" 
-                                               pu-elastic-input 
-                                               style="min-width: 100px; max-width: 150px;"
-                                               ng-model="inputTagExcludeFilter" 
-                                               tm-auto-fill="tags"
-                                               placeholder="+"
-                                               autocomplete="off" />
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="tm-portal">
-                                <h4>Date Filter</h4>
-                                <div class="text-center">
-                                    <md-datepicker ng-model="startDate" md-placeholder="Start"></md-datepicker>
-                                    <b class="tm-datepicker-hyphen"> &#8213; </b>
-                                    <md-datepicker ng-model="endDate" md-placeholder="End"></md-datepicker>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="tm-portal">
-                                <h4>Merchant Filter</h4>
-                                <div class="tm-merchant-filter">
-                                    <input type="text" 
-                                           id="input-merchant"
-                                           class="form-control input-sm" 
-                                           ng-model="inputMerchant" 
-                                           placeholder="Name contains..."
-                                           autocomplete="off" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="tm-portal">
-                                <h4>Apply Filter</h4>
-                                <div class="tm-run-query">
-                                    <button class="tm-tran-query-button btn btn-info btn-sm" ng-click="onQueryFormSubmit()">Apply</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <form class="tm-portal tm-save-query-form" ng-controller="SaveQueryFormController" > 
-                                <h4>Load &amp; Save Filter <small>(note: you must <b>Apply</b> the filter before saving it)</small></h4>
-                                <div class="tm-md-autocomplete">
-                                    <md-content>
-                                        <md-autocomplete md-selected-item="selectedSavedQuery" 
-                                                         md-selected-item-change="onChangeSavedQuery()"
-                                                         md-search-text="inputSavedQueryName" 
-                                                         md-items="savedQuery in getSavedQueries(inputSavedQueryName)" 
-                                                         md-item-text="savedQuery.name"
-                                                         md-no-cache="true"
-                                                         md-min-length="0"
-                                                         md-select-on-match="true"
-                                                         placeholder="Load saved filter...">
-                                            <md-item-template>
-                                                <span md-highlight-text="searchText">{{savedQuery.name}}</span>
-                                            </md-item-template>
-                                        </md-autocomplete>
-                                    </md-content>
-                                </div>
-                                <div class="text-center">
-                                    <button class="btn btn-info btn-sm" ng-click="saveQuery()">Save</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
+            <div ng-include="'templates/tran-chart.html'"> 
             </div>
         </div>
 
         <div class="row">
-            <div class="tm-portal" ng-controller="TranListController" >
-                <h3>Transactions <small>[{{trans.length}} of {{transSummary.count}}]</small> <span class="tm-grand-total"><small>Total Amount:</small> <span tm-is-debit="{{transSummary.amountValue < 0}}">{{ transSummary.amountValue | currency }}</span></span> </h3>
-                <table class="table table-condensed table-hover tm-tran-table">
-                    <tr ng-include="'templates/tran-th.html'"></tr>
-                    <tr ng-repeat="tran in trans" ng-include="'templates/tran-tr.html'"></tr>
-
-                    <tr class="tm-list-totals">
-                        <th></th>
-                        <th class="text-right" tm-is-debit="{{ transSums['amountValue'] < 0 }}" >{{ transSums['amountValue'] | currency}}</th>
-                        <th></th>    <!-- pending -->
-                        <th>Total</th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                </table>
-                <img src="icons/thinking.gif" ng-if="isThinking"/>
-                <button ng-if="!areAllTransFetched && !isThinking" class="btn btn-info btn-sm" ng-click="fetchNextPage()">more</button>
-                <!-- button ng-if="!areAllTransFetched && !isThinking" class="btn btn-info btn-sm tm-fetch-all-trans-button" ng-click="fetchAllRemainingTrans()">all</button -->
+            <div ng-include="'templates/tran-list.html'"> 
             </div>
         </div>
     </div>
