--- a/static/accounts.html
+++ b/static/accounts.html
@@ -63,6 +63,11 @@
         </div>
 
         <div class="row">
+            <div ng-include="'templates/account-time-series-chart.html'"> 
+            </div>
+        </div>
+
+        <div class="row">
             <div ng-include="'templates/tran-chart.html'"> 
             </div>
         </div>
