--- a/static/accounts.html
+++ b/static/accounts.html
@@ -2,6 +2,7 @@
 <html ng-app="MyApp">
 
 <head>
+    <title>ThinMint - Accounts</title>
     <!-- TODO: load JS after html to improve rendering time -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
     <!-- script src="js/angular.min.js"></script -->
@@ -51,6 +52,7 @@
             <a href="/accounts.html">Accounts</a>
             <a href="/accounts.html#?accountTypes=Cash">Cash Accounts</a>
             <a href="/accounts.html#?accountTypes=Investment">Investment Accounts</a>
+            <a href="/tags.html">Tags</a>
             <a href="/trans.html">Transactions</a>
         </div>
     </div>
