--- a/static/tags.html
+++ b/static/tags.html
@@ -2,7 +2,7 @@
 <html ng-app="MyApp">
 
 <head>
-    <title>ThinMint - Account</title>
+    <title>ThinMint - Tags</title>
 
     <!-- TODO: load JS after html to improve rendering time -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
@@ -58,37 +58,24 @@
         </div>
     </div>
 
-    <div class="container" ng-controller="AccountPageController">
+    <div class="container" ng-controller="TagsPageController">
 
-        <!-- account summary -->
         <div class="row">
-            <div class="tm-portal tm-account-summary" ng-controller="SingleAccountSummaryController">
-                <h3>Account Summary</h3>
-                <table class="table table-condensed table-hover tm-account-list">
-                    <tr ng-include="'templates/account-th.html'"></tr>
-                    <tr ng-include="'templates/account-tr.html'"></tr>
-                </table>
-                <div class="text-center"> 
-                    <img src="icons/thinking.gif" ng-if="isThinking"/>
+            <!-- tag chart -->
+            <div class="tm-portal" ng-controller="TagsByMonthChartController">
+                <h3>{{chartTitle}}</h3>
+                <div class="text-center">
+                    <div class="tm-trans-canvas-thinking" > 
+                        <img src="icons/thinking.gif" ng-if="isChartThinking"/>
+                    </div>
+                    <canvas tm-chart-data="chartData" width="1000" height="350"></canvas>
                 </div>
             </div>
         </div>
 
-        <div class="row">
-            <div ng-include="'templates/account-time-series-chart.html'"> 
-            </div>
+        <div ng-repeat="tag in tags | orderBy" ng-include="'templates/tag-by-month-chart.html'">
         </div>
 
-
-        <div class="row">
-            <div ng-include="'templates/tran-chart.html'"> 
-            </div>
-        </div>
-
-        <div class="row">
-            <div ng-include="'templates/tran-list.html'"> 
-            </div>
-        </div>
     </div>
 
     <div id="tm-page-footer" class="container-fluid">
