--- a/static/index.html
+++ b/static/index.html
@@ -157,7 +157,7 @@
         <div ng-controller="ThisMonthByTagController">
             <div class="row">
                 <div class="tm-portal">
-                    <h3>Spending This Month, By Tag (excluding bills, income)</h3>
+                    <h3>Spending This Month, By Tag (excluding bills, income, transfer)</h3>
                     <div class="text-center">
                         <div class="tm-trans-canvas-thinking" > 
                             <img src="icons/thinking.gif" ng-if="isThisMonthChartThinking"/>
@@ -169,7 +169,7 @@
 
             <div class="row">
                 <div class="tm-portal">
-                    <h3>Spending Last Month, By Tag (excluding bills, income)</h3>
+                    <h3>Spending Last Month, By Tag (excluding bills, income, transfer)</h3>
                     <div class="text-center">
                         <div class="tm-trans-canvas-thinking" > 
                             <img src="icons/thinking.gif" ng-if="isLastMonthChartThinking"/>
